iac/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: e-sketch-ingress
  namespace: e-sketch
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: e-sketch.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: est-front
                port:
                  name: http
          - path: /proxy/
            pathType: Prefix
            backend:
              service:
                name: est-proxy
                port:
                  name: http
          - path: /preview
            pathType: Prefix
            backend:
              service:
                name: est-preview
                port:
                  name: http

    - host: xn----itbbt8ai9a.xn--p1ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: est-front
                port:
                  name: http
          - path: /proxy/
            pathType: Prefix
            backend:
              service:
                name: est-proxy
                port:
                  name: http
          - path: /preview
            pathType: Prefix
            backend:
              service:
                name: est-preview
                port:
                  name: http

  tls:
    - hosts:
        - e-sketch.ru
        - xn----itbbt8ai9a.xn--p1ai
      secretName: e-sketch-tls
